# rustdoc-katex-demo

./: Cargo.toml  Makefile.toml  README.md  build-docs  header.html
doc/: after.html
src/: lib.rs  main.rs
