[package]
name = "rustdoc-katex-demo"
description = "This project demonstrates an approach to including KaTeX in Rust docs"
version = "0.1.3"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rustdoc-katex-demo"
repository = "https://github.com/paulkernfeld/rustdoc-katex-demo"

# An unnecessary dependency because we want to ensure that docs for dependencies do not include KaTeX
[dependencies]
bitflags = "1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
